--- a/basic/module.ipynb
+++ b/basic/module.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "d6075598",
    "metadata": {},
    "outputs": [],
@@ -293,22 +293,23 @@
     "\n",
     "day1 = datetime.datetime(2025, 6, 9, 13, 17, 11)\n",
     "day2 = datetime.date(2025, 6, 9)\n",
+    "day3 = datetime.date(2023, 6, 9)\n",
     "time1 = datetime.time(13, 17, 11)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ced8ade7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1749442765.7287097"
+       "1749516530.5688198"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +317,7 @@
    "source": [
     "import time\n",
     "\n",
-    "# \n",
+    "# 1970-01-01 기준으로 지난 시간 초단위로 리턴\n",
     "time.time()"
    ]
   },
@@ -324,6 +325,274 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1783e97e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "731 days, 0:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# weekday : 요일을 숫자로 처리 (월 - 0)\n",
+    "print(day1.weekday())\n",
+    "print(day2 - day3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "22815997",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2025, 6, 10, 9, 50, 18, 726436)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "now = datetime.datetime.now()\n",
+    "now"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8ba127b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2025, 6, 10, 9, 53, 2, 584709)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "now = datetime.now()\n",
+    "now"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1f17d861",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2025, 6, 10, 9, 53, 4, 783993)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "now = datetime.today()\n",
+    "now"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d02fd63a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1749516927.6079094\n",
+      "time.struct_time(tm_year=2025, tm_mon=6, tm_mday=10, tm_hour=9, tm_min=55, tm_sec=27, tm_wday=1, tm_yday=161, tm_isdst=0)\n",
+      "Tue Jun 10 09:55:27 2025\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(time.time())\n",
+    "print(time.localtime(time.time()))\n",
+    "print(time.asctime(time.localtime(time.time())))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9188246",
+   "metadata": {},
+   "source": [
+    "### 내장함수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2278b447",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "body\n",
+      "foo\n",
+      "boo\n",
+      "bar\n",
+      "0 body\n",
+      "1 foo\n",
+      "2 boo\n",
+      "3 bar\n"
+     ]
+    }
+   ],
+   "source": [
+    "# enumerate() : 리스트, 튜플, 문자열을 입력받아 인덱스와 enumerate 객체 리턴\n",
+    "list1 = [\"body\", \"foo\", \"boo\", \"bar\"]\n",
+    "\n",
+    "for item in list1:\n",
+    "    print(item)\n",
+    "\n",
+    "for idx, item in enumerate(list1):\n",
+    "    print(idx, item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "179260cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "3\n",
+      "3.0\n",
+      "3.0\n",
+      "3\n",
+      "3.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "str1 = \"3\"\n",
+    "\n",
+    "# 숫자로 변경 -> int()\n",
+    "# int(문자 숫자) => int형 숫자\n",
+    "print(int(str1))\n",
+    "print(int(3.6))\n",
+    "\n",
+    "# 실수 => float\n",
+    "print(float(str1))\n",
+    "print(float(3))\n",
+    "\n",
+    "# 문자 => str()\n",
+    "print(str(3))\n",
+    "print(str(3.4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd014fcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "(4, 5, 6)\n",
+      "3\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# tuple <==> list\n",
+    "\n",
+    "t1 = (1, 2, 3)\n",
+    "list1 = [4, 5, 6]\n",
+    "\n",
+    "# list() / tuple()\n",
+    "print(list(t1))\n",
+    "print(tuple(list1))\n",
+    "\n",
+    "# len() : 길이\n",
+    "print(len(t1))\n",
+    "print(len(list1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "c9dcf2e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 5, 6]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sort\n",
+    "\n",
+    "list1.sort()\n",
+    "list1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "ae8e80d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5, 6, 2, 1]\n",
+      "[6, 5, 4, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [4, 5, 6, 2, 1]\n",
+    "\n",
+    "# 원본 정렬 X => 리스트 정렬 후 그 결과를 새로운 리스트로 리턴\n",
+    "list2 = sorted(list1, reverse=True)\n",
+    "\n",
+    "print(list1)\n",
+    "print(list2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2aedc1f8",
    "metadata": {},
    "outputs": [],
    "source": []
