파이썬 기초 및 크롤링

--- a/basic/database3.ipynb
+++ b/basic/database3.ipynb
@@ -12,25 +12,389 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d3e5965d",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pymongo import MongoClient\n",
     "\n",
-    "client = MongoClient(\"mongodb+srv://test:<db_password>@cluster0.owgglvt.mongodb.net/\")"
+    "client = MongoClient(\"mongodb+srv://test:BTW4NOxKROZyov2K@cluster0.owgglvt.mongodb.net/\")\n",
+    "\n",
+    "db = client[\"sample_mflix\"]\n",
+    " "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "87973cf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "embedded_movies\n",
+      "movies\n",
+      "comments\n",
+      "sessions\n",
+      "users\n",
+      "theaters\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 전체 collection 가져오기\n",
+    "\n",
+    "collections = db._list_collection_names()\n",
+    "for col in collections:\n",
+    "    print(col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0b01f2f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 collection 에서 movies 가져오기\n",
+    "movies = db.movies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b9516c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('573a1390f29313caabcd5293'),\n",
+       " 'plot': \"Young Pauline is left a lot of money when her wealthy uncle dies. However, her uncle's secretary has been named as her guardian until she marries, at which time she will officially take ...\",\n",
+       " 'genres': ['Action'],\n",
+       " 'runtime': 199,\n",
+       " 'cast': ['Pearl White', 'Crane Wilbur', 'Paul Panzer', 'Edward Josè'],\n",
+       " 'num_mflix_comments': 0,\n",
+       " 'poster': 'https://m.media-amazon.com/images/M/MV5BMzgxODk1Mzk2Ml5BMl5BanBnXkFtZTgwMDg0NzkwMjE@._V1_SY1000_SX677_AL_.jpg',\n",
+       " 'title': 'The Perils of Pauline',\n",
+       " 'fullplot': 'Young Pauline is left a lot of money when her wealthy uncle dies. However, her uncle\\'s secretary has been named as her guardian until she marries, at which time she will officially take possession of her inheritance. Meanwhile, her \"guardian\" and his confederates constantly come up with schemes to get rid of Pauline so that he can get his hands on the money himself.',\n",
+       " 'languages': ['English'],\n",
+       " 'released': datetime.datetime(1914, 3, 23, 0, 0),\n",
+       " 'directors': ['Louis J. Gasnier', 'Donald MacKenzie'],\n",
+       " 'writers': ['Charles W. Goddard (screenplay)',\n",
+       "  'Basil Dickey (screenplay)',\n",
+       "  'Charles W. Goddard (novel)',\n",
+       "  'George B. Seitz',\n",
+       "  'Bertram Millhauser'],\n",
+       " 'awards': {'wins': 1, 'nominations': 0, 'text': '1 win.'},\n",
+       " 'lastupdated': '2015-09-12 00:01:18.647000000',\n",
+       " 'year': 1914,\n",
+       " 'imdb': {'rating': 7.6, 'votes': 744, 'id': 4465},\n",
+       " 'countries': ['USA'],\n",
+       " 'type': 'movie',\n",
+       " 'tomatoes': {'viewer': {'rating': 2.8, 'numReviews': 9},\n",
+       "  'production': 'Pathè Frères',\n",
+       "  'lastUpdated': datetime.datetime(2015, 9, 11, 17, 46, 19)}}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 영화 상영 시간이 100분 이상인 영화\n",
+    "# {runtime:{$gte:100}}\n",
+    "\n",
+    "document = movies.find_one({\"runtime\":{\"$gte\":100}})\n",
+    "document"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a694a7c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('573a1390f29313caabcd42e8'),\n",
+       " 'plot': 'A group of bandits stage a brazen train hold-up, only to find a determined posse hot on their heels.',\n",
+       " 'genres': ['Short', 'Western'],\n",
+       " 'runtime': 11,\n",
+       " 'cast': ['A.C. Abadie',\n",
+       "  \"Gilbert M. 'Broncho Billy' Anderson\",\n",
+       "  'George Barnes',\n",
+       "  'Justus D. Barnes'],\n",
+       " 'poster': 'https://m.media-amazon.com/images/M/MV5BMTU3NjE5NzYtYTYyNS00MDVmLWIwYjgtMmYwYWIxZDYyNzU2XkEyXkFqcGdeQXVyNzQzNzQxNzI@._V1_SY1000_SX677_AL_.jpg',\n",
+       " 'title': 'The Great Train Robbery',\n",
+       " 'fullplot': \"Among the earliest existing films in American cinema - notable as the first film that presented a narrative story to tell - it depicts a group of cowboy outlaws who hold up a train and rob the passengers. They are then pursued by a Sheriff's posse. Several scenes have color included - all hand tinted.\",\n",
+       " 'languages': ['English'],\n",
+       " 'released': datetime.datetime(1903, 12, 1, 0, 0),\n",
+       " 'directors': ['Edwin S. Porter'],\n",
+       " 'rated': 'TV-G',\n",
+       " 'awards': {'wins': 1, 'nominations': 0, 'text': '1 win.'},\n",
+       " 'lastupdated': '2015-08-13 00:27:59.177000000',\n",
+       " 'year': 1913,\n",
+       " 'imdb': {'rating': 7.4, 'votes': 9847, 'id': 439},\n",
+       " 'countries': ['USA'],\n",
+       " 'type': 'movie',\n",
+       " 'tomatoes': {'viewer': {'rating': 3.7, 'numReviews': 2559, 'meter': 75},\n",
+       "  'fresh': 6,\n",
+       "  'critic': {'rating': 7.6, 'numReviews': 6, 'meter': 100},\n",
+       "  'rotten': 0,\n",
+       "  'lastUpdated': datetime.datetime(2015, 8, 8, 19, 16, 10)},\n",
+       " 'num_mflix_comments': 0}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "document = movies.find_one({\"countries\":\"USA\", \"imdb.rating\":{\"$gte\":7}})\n",
+    "document"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e64daeec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_id\n",
+      "plot\n",
+      "genres\n",
+      "runtime\n",
+      "cast\n",
+      "poster\n",
+      "title\n",
+      "fullplot\n",
+      "languages\n",
+      "released\n",
+      "directors\n",
+      "rated\n",
+      "awards\n",
+      "lastupdated\n",
+      "year\n",
+      "imdb\n",
+      "countries\n",
+      "type\n",
+      "tomatoes\n",
+      "num_mflix_comments\n"
+     ]
+    }
+   ],
+   "source": [
+    "documents = movies.find_one({\"countries\":\"USA\", \"imdb.rating\":{\"$gte\":7}})\n",
+    "for doc in documents:\n",
+    "    print(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a735e5a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# users 컬렉션 가져온 후 이름이 hong 인 user 조회\n",
+    "\n",
+    "users = db.users"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f1c7b9ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('6848eb2042ded198c685415a'), 'name': 'Hong', 'email': 'hong@gmail.com', 'password': '12345'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "document = users.find_one({\"name\":\"Hong\"})\n",
+    "print(document)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ca369656",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "UpdateResult({'n': 0, 'electionId': ObjectId('7fffffff0000000000000078'), 'opTime': {'ts': Timestamp(1749611871, 5), 't': 120}, 'nModified': 0, 'ok': 1.0, '$clusterTime': {'clusterTime': Timestamp(1749611871, 5), 'signature': {'hash': b'\\x02\\xff\\xe6\\xee\"T\\xd44t\\xa54b\\xba\\xca?\\x95\\x87\\x1b;\\x01', 'keyId': 7480962959452143618}}, 'operationTime': Timestamp(1749611871, 5), 'updatedExisting': False}, acknowledged=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "filter = {\"title\": \"Regenration\"}\n",
+    "update = {\n",
+    "  \"$set\": {\n",
+    "    \"year\":1903\n",
+    "  },\n",
+    "}\n",
+    "result = movies.update_one(filter, update)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "94bd718c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "filter = {\"year\":{\"$lt\":1920}}\n",
+    "update = {\n",
+    "  \"$set\": {\n",
+    "    \"year\":1905\n",
+    "  },\n",
+    "}\n",
+    "\n",
+    "result = movies.update_many(filter, update)\n",
+    "print(result.modified_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a2729042",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = movies.delete_one({\"cast\":\"A.C. Abadie\"})\n",
+    "print(result.deleted_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c1993bc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "873\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = movies.delete_many({\"genres\":\"History\"})\n",
+    "print(result.deleted_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a973289d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "InsertOneResult(ObjectId('6848fc6c6e1ab6e571fbcbfa'), acknowledged=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = {\n",
+    "    \"name\":\"Cho\",\n",
+    "    \"email\":\"cho@gmail.com\",\n",
+    "    \"password\":\"12345\"\n",
+    "}\n",
+    "\n",
+    "result = users.insert_one(data)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "76813d0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ObjectId('6848fd6a6e1ab6e571fbcc04'), ObjectId('6848fd6a6e1ab6e571fbcc05'), ObjectId('6848fd6a6e1ab6e571fbcc06')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [\n",
+    "    {\"name\": \"Tom\", \"email\": \"tom@gmail.com\", \"password\": \"12345\"},\n",
+    "    {\"name\": \"Yong\", \"email\": \"yong@gmail.com\", \"password\": \"12345\"},\n",
+    "    {\"name\": \"Jeong\", \"email\": \"jeong@gmail.com\", \"password\": \"12345\"},\n",
+    "]\n",
+    "\n",
+    "result = users.insert_many(data)\n",
+    "print(result.inserted_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2659feff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.3"
   }
  },
