파이썬 기초 (엑셀 크롤링, 정규식)

--- a/crawl/excel.ipynb
+++ b/crawl/excel.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3afa3438",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "7f9b75c3",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
     }
    ],
    "source": [
-    "load_workbook(\"./data/sample2.xlsx\")\n",
+    "wb = load_workbook(\"./data/sample2.xlsx\")\n",
     "ws = wb.active\n",
     "\n",
     "for i in range(1, 11):\n",
@@ -159,8 +159,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "958e3156",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n",
+      "19\n",
+      "19\n",
+      "24\n",
+      "68\n",
+      "81\n",
+      "55\n",
+      "98\n",
+      "67\n",
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "wb = load_workbook(\"./data/sample2.xlsx\")\n",
+    "ws = wb.active\n",
+    "\n",
+    "for row in ws.iter_rows():\n",
+    "    # print(row)\n",
+    "    print(row[1].value)\n",
+    "\n",
+    "wb.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d3160a1",
    "metadata": {},
    "outputs": [],
    "source": []
