파이썬 기초 (selenium 을 이용한 크롤링 후 파싱하기)

--- a/crawl/regex.ipynb
+++ b/crawl/regex.ipynb
@@ -981,7 +981,19 @@
    "execution_count": null,
    "id": "73e85bf9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mZeroDivisionError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 95\u001b[39m\n\u001b[32m     90\u001b[39m                 others_unsurvived += \u001b[32m1\u001b[39m\n\u001b[32m     92\u001b[39m \u001b[38;5;66;03m# 보고서 작성\u001b[39;00m\n\u001b[32m     93\u001b[39m \u001b[38;5;66;03m# 생존률 계산\u001b[39;00m\n\u001b[32m     94\u001b[39m survived_rate = \u001b[33m\"\u001b[39m\u001b[38;5;132;01m%.2f\u001b[39;00m\u001b[38;5;132;01m%%\u001b[39;00m\u001b[33m\"\u001b[39m % (\n\u001b[32m---> \u001b[39m\u001b[32m95\u001b[39m     \u001b[43mmen_survived\u001b[49m\u001b[43m \u001b[49m\u001b[43m/\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mmen_survived\u001b[49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m \u001b[49m\u001b[43mmen_unsurvived\u001b[49m\u001b[43m)\u001b[49m * \u001b[32m100\u001b[39m\n\u001b[32m     96\u001b[39m )  \u001b[38;5;66;03m# %% -> 이건 진짜 퍼센트 기호라는걸 알려주기 위함\u001b[39;00m\n\u001b[32m     97\u001b[39m work_sheet_report.append([\u001b[33m\"\u001b[39m\u001b[33m남성\u001b[39m\u001b[33m\"\u001b[39m, married_women_survived, married_women_unsurvived, survived_rate])\n\u001b[32m     99\u001b[39m survived_rate = \u001b[33m\"\u001b[39m\u001b[38;5;132;01m%.2f\u001b[39;00m\u001b[38;5;132;01m%%\u001b[39;00m\u001b[33m\"\u001b[39m % (\n\u001b[32m    100\u001b[39m     married_women_survived / married_women_survived + (married_women_unsurvived * \u001b[32m100\u001b[39m)\n\u001b[32m    101\u001b[39m )\n",
+      "\u001b[31mZeroDivisionError\u001b[39m: division by zero"
+     ]
+    }
+   ],
    "source": [
     "# Mr. / Miss. / Mrs. / 없는 경우\n",
     "\n",
@@ -1010,8 +1022,21 @@
     "work_sheet_other = work_book.create_sheet()\n",
     "work_sheet_other.title = \"기타\"\n",
     "\n",
+    "# 보고서 시트 생성\n",
+    "work_sheet_report = work_book.create_sheet(title=\"보고서\")\n",
+    "# 보고서 시트 제목행 추가\n",
+    "work_sheet_report.append([\"분류\", \"생존자수\", \"사망자수\", \"생존률\"])\n",
+    "\n",
+    "# 각 분류에 맞춰 생존자수, 사망자 수 변수 선언\n",
+    "men_survived, men_unsurvived = 0, 0\n",
+    "single_women_survived, single_women_unsurvived = 0, 0\n",
+    "married_women_survived, married_women_unsurvived = 0, 0\n",
+    "others_survived, others_unsurvived = 0, 0\n",
+    "\n",
     "# Mr\\., Miss\\., Mrs\\.\n",
     "pattern = re.compile(r\" M[a-z]{1,3}\\.\")\n",
+    "# 강사님 패턴\n",
+    "# pattern = re.compile(r\" [A-Za-z]+\\.\"\n",
     "\n",
     "list1 = []\n",
     "\n",
@@ -1019,6 +1044,9 @@
     "\n",
     "    # 이름에 패턴 적용\n",
     "    data = pattern.search(each_row[3].value)\n",
+    "\n",
+    "    # 생존자 및 사망자 값 가져오기\n",
+    "    survived = each_row[1].value\n",
     "\n",
     "    # 제목행\n",
     "    if each_row[0].row == 1:\n",
@@ -1028,23 +1056,59 @@
     "        work_sheet_women.append(list1)\n",
     "        work_sheet_solo_women.append(list1)\n",
     "        work_sheet_other.append(list1)\n",
-    "        \n",
+    "\n",
     "    # 데이터행\n",
     "    else:\n",
     "        if data != None:\n",
     "            result = data.group()\n",
     "            if result.strip() == \"Mr.\":\n",
     "                work_sheet_man.append([item.value for item in each_row])\n",
+    "                if survived == 1:\n",
+    "                    men_survived += 1\n",
+    "                else:\n",
+    "                    men_unsurvived += 1\n",
     "            elif result.strip() == \"Mrs.\":\n",
     "                work_sheet_women.append([item.value for item in each_row])\n",
+    "                if survived == 1:\n",
+    "                    married_women_survived += 1\n",
+    "                else:\n",
+    "                    married_women_unsurvived += 1\n",
     "            elif result.strip() == \"Miss.\":\n",
     "                work_sheet_solo_women.append([item.value for item in each_row])\n",
+    "                if survived == 1:\n",
+    "                    single_women_survived += 1\n",
+    "                else:\n",
+    "                    single_women_unsurvived += 1\n",
     "            else:\n",
     "                work_sheet_other.append([item.value for item in each_row])\n",
-    "                \n",
+    "                if survived == 1:\n",
+    "                    others_survived += 1\n",
+    "                else:\n",
+    "                    others_unsurvived += 1\n",
     "\n",
+    "    # 보고서 작성\n",
+    "    # 생존률 계산\n",
+    "    survived_rate = \"%.2f%%\" % (\n",
+    "        men_survived / (men_survived + men_unsurvived * 100)\n",
+    "    )  # %% -> 이건 진짜 퍼센트 기호라는걸 알려주기 위함\n",
+    "    work_sheet_report.append([\"남성\", married_women_survived, married_women_unsurvived, survived_rate])\n",
     "\n",
-    "work_book.save(\"./data/train_result.xlsx\")\n",
+    "    survived_rate = \"%.2f%%\" % (\n",
+    "        married_women_survived / married_women_survived + (married_women_unsurvived * 100)\n",
+    "    )\n",
+    "    work_sheet_report.append([\"기혼여성\", married_women_survived, married_women_unsurvived, survived_rate])\n",
+    "\n",
+    "    survived_rate = \"%.2f%%\" % (\n",
+    "        single_women_survived / single_women_survived + (single_women_unsurvived * 100)\n",
+    "    )\n",
+    "    work_sheet_report.append([\"미혼여성\", single_women_survived, single_women_unsurvived, survived_rate])\n",
+    "\n",
+    "    survived_rate = \"%.2f%%\" % (\n",
+    "        others_survived / others_survived + (others_unsurvived * 100)\n",
+    "    )\n",
+    "    work_sheet_report.append([\"기타\", others_survived, others_unsurvived, survived_rate])\n",
+    "\n",
+    "    work_book.save(\"./data/train_result.xlsx\")\n",
     "\n",
     "wb.close()\n",
     "work_book.close()"
