데이터 분석 및 시각화 (ai 의 기반)

--- a/analytics/seoul.ipynb
+++ b/analytics/seoul.ipynb
@@ -2074,37 +2074,39 @@
      "output_type": "stream",
      "text": [
       "Collecting folium\n",
-      "  Using cached folium-0.20.0-py2.py3-none-any.whl.metadata (4.2 kB)\n",
+      "  Downloading folium-0.20.0-py2.py3-none-any.whl.metadata (4.2 kB)\n",
       "Collecting branca>=0.6.0 (from folium)\n",
-      "  Using cached branca-0.8.1-py3-none-any.whl.metadata (1.5 kB)\n",
+      "  Downloading branca-0.8.1-py3-none-any.whl.metadata (1.5 kB)\n",
       "Collecting jinja2>=2.9 (from folium)\n",
       "  Using cached jinja2-3.1.6-py3-none-any.whl.metadata (2.9 kB)\n",
-      "Requirement already satisfied: numpy in c:\\source\\pythonsource\\venv\\lib\\site-packages (from folium) (2.3.1)\n",
-      "Requirement already satisfied: requests in c:\\source\\pythonsource\\venv\\lib\\site-packages (from folium) (2.32.4)\n",
+      "Requirement already satisfied: numpy in c:\\source\\pythonsource\\.venv\\lib\\site-packages (from folium) (2.3.1)\n",
+      "Requirement already satisfied: requests in c:\\source\\pythonsource\\.venv\\lib\\site-packages (from folium) (2.32.4)\n",
       "Collecting xyzservices (from folium)\n",
-      "  Using cached xyzservices-2025.4.0-py3-none-any.whl.metadata (4.3 kB)\n",
+      "  Downloading xyzservices-2025.4.0-py3-none-any.whl.metadata (4.3 kB)\n",
       "Collecting MarkupSafe>=2.0 (from jinja2>=2.9->folium)\n",
       "  Using cached MarkupSafe-3.0.2-cp313-cp313-win_amd64.whl.metadata (4.1 kB)\n",
-      "Requirement already satisfied: charset_normalizer<4,>=2 in c:\\source\\pythonsource\\venv\\lib\\site-packages (from requests->folium) (3.4.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\source\\pythonsource\\venv\\lib\\site-packages (from requests->folium) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\source\\pythonsource\\venv\\lib\\site-packages (from requests->folium) (2.4.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\source\\pythonsource\\venv\\lib\\site-packages (from requests->folium) (2025.4.26)\n",
-      "Using cached folium-0.20.0-py2.py3-none-any.whl (113 kB)\n",
-      "Using cached branca-0.8.1-py3-none-any.whl (26 kB)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in c:\\source\\pythonsource\\.venv\\lib\\site-packages (from requests->folium) (3.4.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\source\\pythonsource\\.venv\\lib\\site-packages (from requests->folium) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\source\\pythonsource\\.venv\\lib\\site-packages (from requests->folium) (2.4.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\source\\pythonsource\\.venv\\lib\\site-packages (from requests->folium) (2025.4.26)\n",
+      "Downloading folium-0.20.0-py2.py3-none-any.whl (113 kB)\n",
+      "Downloading branca-0.8.1-py3-none-any.whl (26 kB)\n",
       "Using cached jinja2-3.1.6-py3-none-any.whl (134 kB)\n",
-      "Using cached xyzservices-2025.4.0-py3-none-any.whl (90 kB)\n",
       "Using cached MarkupSafe-3.0.2-cp313-cp313-win_amd64.whl (15 kB)\n",
+      "Downloading xyzservices-2025.4.0-py3-none-any.whl (90 kB)\n",
       "Installing collected packages: xyzservices, MarkupSafe, jinja2, branca, folium\n",
-      "Successfully installed MarkupSafe-3.0.2 branca-0.8.1 folium-0.20.0 jinja2-3.1.6 xyzservices-2025.4.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
       "\n",
-      "[notice] A new release of pip is available: 25.0.1 -> 25.1.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+      "   ---------------- ----------------------- 2/5 [jinja2]\n",
+      "   ---------------- ----------------------- 2/5 [jinja2]\n",
+      "   ---------------- ----------------------- 2/5 [jinja2]\n",
+      "   ------------------------ --------------- 3/5 [branca]\n",
+      "   -------------------------------- ------- 4/5 [folium]\n",
+      "   -------------------------------- ------- 4/5 [folium]\n",
+      "   -------------------------------- ------- 4/5 [folium]\n",
+      "   -------------------------------- ------- 4/5 [folium]\n",
+      "   ---------------------------------------- 5/5 [folium]\n",
+      "\n",
+      "Successfully installed MarkupSafe-3.0.2 branca-0.8.1 folium-0.20.0 jinja2-3.1.6 xyzservices-2025.4.0\n"
      ]
     }
    ],
