--- a/openai/trans.ipynb
+++ b/openai/trans.ipynb
@@ -3,30 +3,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "549d0b9b",
+   "id": "8e736a2d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: googletrans in c:\\source\\pythonsource\\.venv\\lib\\site-packages (4.0.2)\n",
-      "Requirement already satisfied: httpx>=0.27.2 in c:\\source\\pythonsource\\.venv\\lib\\site-packages (from httpx[http2]>=0.27.2->googletrans) (0.28.1)\n",
-      "Requirement already satisfied: anyio in c:\\source\\pythonsource\\.venv\\lib\\site-packages (from httpx>=0.27.2->httpx[http2]>=0.27.2->googletrans) (4.9.0)\n",
-      "Requirement already satisfied: certifi in c:\\source\\pythonsource\\.venv\\lib\\site-packages (from httpx>=0.27.2->httpx[http2]>=0.27.2->googletrans) (2025.4.26)\n",
-      "Requirement already satisfied: httpcore==1.* in c:\\source\\pythonsource\\.venv\\lib\\site-packages (from httpx>=0.27.2->httpx[http2]>=0.27.2->googletrans) (1.0.9)\n",
-      "Requirement already satisfied: idna in c:\\source\\pythonsource\\.venv\\lib\\site-packages (from httpx>=0.27.2->httpx[http2]>=0.27.2->googletrans) (3.10)\n",
-      "Requirement already satisfied: h11>=0.16 in c:\\source\\pythonsource\\.venv\\lib\\site-packages (from httpcore==1.*->httpx>=0.27.2->httpx[http2]>=0.27.2->googletrans) (0.16.0)\n",
-      "Requirement already satisfied: h2<5,>=3 in c:\\source\\pythonsource\\.venv\\lib\\site-packages (from httpx[http2]>=0.27.2->googletrans) (4.2.0)\n",
-      "Requirement already satisfied: hyperframe<7,>=6.1 in c:\\source\\pythonsource\\.venv\\lib\\site-packages (from h2<5,>=3->httpx[http2]>=0.27.2->googletrans) (6.1.0)\n",
-      "Requirement already satisfied: hpack<5,>=4.1 in c:\\source\\pythonsource\\.venv\\lib\\site-packages (from h2<5,>=3->httpx[http2]>=0.27.2->googletrans) (4.1.0)\n",
-      "Requirement already satisfied: sniffio>=1.1 in c:\\source\\pythonsource\\.venv\\lib\\site-packages (from anyio->httpx>=0.27.2->httpx[http2]>=0.27.2->googletrans) (1.3.1)\n",
-      "Requirement already satisfied: deepl in c:\\source\\pythonsource\\.venv\\lib\\site-packages (1.22.0)\n",
-      "Requirement already satisfied: requests<3,>=2 in c:\\source\\pythonsource\\.venv\\lib\\site-packages (from deepl) (2.32.4)\n",
-      "Requirement already satisfied: charset_normalizer<4,>=2 in c:\\source\\pythonsource\\.venv\\lib\\site-packages (from requests<3,>=2->deepl) (3.4.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\source\\pythonsource\\.venv\\lib\\site-packages (from requests<3,>=2->deepl) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\source\\pythonsource\\.venv\\lib\\site-packages (from requests<3,>=2->deepl) (2.4.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\source\\pythonsource\\.venv\\lib\\site-packages (from requests<3,>=2->deepl) (2025.4.26)\n"
+      "Collecting deepl\n",
+      "  Using cached deepl-1.22.0-py3-none-any.whl.metadata (35 kB)\n",
+      "Requirement already satisfied: requests<3,>=2 in c:\\source\\pythonsource\\venv\\lib\\site-packages (from deepl) (2.32.4)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in c:\\source\\pythonsource\\venv\\lib\\site-packages (from requests<3,>=2->deepl) (3.4.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\source\\pythonsource\\venv\\lib\\site-packages (from requests<3,>=2->deepl) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\source\\pythonsource\\venv\\lib\\site-packages (from requests<3,>=2->deepl) (2.4.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\source\\pythonsource\\venv\\lib\\site-packages (from requests<3,>=2->deepl) (2025.4.26)\n",
+      "Using cached deepl-1.22.0-py3-none-any.whl (43 kB)\n",
+      "Installing collected packages: deepl\n",
+      "Successfully installed deepl-1.22.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.0.1 -> 25.1.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
@@ -37,8 +39,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "5b456717",
+   "execution_count": 4,
+   "id": "542b1826",
    "metadata": {},
    "outputs": [
     {
@@ -47,13 +49,13 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# env\n",
+    "# env \n",
     "\n",
     "from dotenv import load_dotenv\n",
     "from openai import OpenAI\n",
@@ -63,8 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "37e01be4",
+   "execution_count": 5,
+   "id": "c7c667a7",
    "metadata": {},
    "outputs": [
     {
@@ -75,12 +77,12 @@
       "팔레스타인 운동가는 루이지애나 아이스 구류 센터에서 풀려 난 다음날 토요일 오후 뉴저지 주 뉴 어크에 도착했습니다. \n",
       "그는 공항의 개인 지역에서 재결합 한 후 아내를 받아들이고 신생아의 유모차를 밀고있는 것을 보았습니다.\n",
       "칼릴은 기자 회견에서 지지자들에게 감사하면서“여전히 싸움은 끝났다”고 말했다. \n",
-      "\"저는 그 시설에 남겨진 이민자들을 위해 팔레스타인 사람들을 계속 옹호합니다.\"\n"
+      "“저는 그 시설에 남겨진 이민자들을 위해 팔레스타인 사람들을 계속 옹호합니다.\n"
      ]
     }
    ],
    "source": [
-    "# 구글 번역\n",
+    "# 구글번역\n",
     "\n",
     "from googletrans import Translator\n",
     "\n",
@@ -90,17 +92,17 @@
     "The Palestinian activist arrived in Newark, New Jersey, Saturday afternoon, a day after he was released from a Louisiana ICE detention center. \n",
     "He was seen embracing his wife and pushing the stroller of his newborn son after reuniting in a private area of the airport.\n",
     "“Still, the fight is far from over,” Khalil said while thanking his supporters at a news conference. \n",
-    "“I continue to advocate for Palestinians, for the immigrants who are left behind in that facility.”\n",
+    "“I continue to advocate for Palestinians, for the immigrants who are left behind in that facility.\n",
     "\"\"\"\n",
     "\n",
     "result = await translator.translate(text, dest=\"ko\")\n",
-    "print(result.text)"
+    "print(result.text)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "0f0dcfe8",
+   "execution_count": null,
+   "id": "c79ee0e1",
    "metadata": {},
    "outputs": [
     {
@@ -111,13 +113,13 @@
       "이 팔레스타인 활동가는 루이지애나 이민세관단속국 구치소에서 석방된 다음 날인 토요일 오후 뉴저지 주 뉴어크에 도착했습니다.\n",
       "그는 공항의 비공개 구역에서 재회한 후 아내와 포옹하고 갓 태어난 아들의 유모차를 밀고 있는 모습이 목격되었습니다.\n",
       "칼릴은 기자회견에서 지지자들에게 감사를 표하며 \"아직 싸움은 끝나지 않았다\"고 말했습니다.\n",
-      "\"저는 팔레스타인인들과 그 시설에 남겨진 이민자들을 위해 계속 옹호할 것입니다.\"\n",
+      "\"저는 팔레스타인인들과 그 시설에 남겨진 이민자들을 위해 계속 옹호할 것입니다.\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# deepl 번역\n",
+    "# deepl\n",
     "import deepl\n",
     "import os\n",
     "\n",
@@ -128,17 +130,25 @@
     "The Palestinian activist arrived in Newark, New Jersey, Saturday afternoon, a day after he was released from a Louisiana ICE detention center. \n",
     "He was seen embracing his wife and pushing the stroller of his newborn son after reuniting in a private area of the airport.\n",
     "“Still, the fight is far from over,” Khalil said while thanking his supporters at a news conference. \n",
-    "“I continue to advocate for Palestinians, for the immigrants who are left behind in that facility.”\n",
+    "“I continue to advocate for Palestinians, for the immigrants who are left behind in that facility.\n",
     "\"\"\"\n",
     "\n",
     "result = translator.translate_text(text, target_lang=\"ko\")\n",
     "print(result.text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "100d9454",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
